--- a/locale/cs/LC_MESSAGES/django.po
+++ b/locale/cs/LC_MESSAGES/django.po
@@ -5,15 +5,16 @@
 #
 # Translators:
 # trendspotter <jirka.p@volny.cz>, 2022
+# Rowan Seymour <rowanseymour@gmail.com>, 2022
 #
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-07-19 17:07+0000\n"
+"POT-Creation-Date: 2022-07-19 18:45+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
-"Last-Translator: trendspotter <jirka.p@volny.cz>, 2022\n"
+"Last-Translator: Rowan Seymour <rowanseymour@gmail.com>, 2022\n"
 "Language-Team: Czech (https://www.transifex.com/rapidpro/teams/226/cs/)\n"
 "Language: cs\n"
 "MIME-Version: 1.0\n"
@@ -2186,31 +2187,31 @@ msgid "Email Address"
 msgstr "E-mailová adresa"
 
 msgid "External Identifier"
-msgstr ""
+msgstr "Externí Identifikátor"
 
 msgid "Facebook Identifier"
-msgstr ""
+msgstr "Identifikátor Facebooku"
 
 msgid "Firebase Cloud Messaging Identifier"
-msgstr ""
+msgstr "Identifikátor Firebase Cloud Messaging"
 
 msgid "Freshchat Identifier"
-msgstr ""
+msgstr "Freshchat Identifikátor"
 
 msgid "Instagram Handle"
 msgstr ""
 
 msgid "JioChat Identifier"
-msgstr ""
+msgstr "JioChat Identifikátor"
 
 msgid "LINE Identifier"
-msgstr ""
+msgstr "Identifikátor LINE"
 
 msgid "RocketChat Identifier"
-msgstr ""
+msgstr "RocketChat Identifikátor"
 
 msgid "Telegram Identifier"
-msgstr ""
+msgstr "Identifikátor Telegram"
 
 msgid "Twitter ID"
 msgstr "Twitter ID"
@@ -2219,19 +2220,19 @@ msgid "Twitter Handle"
 msgstr ""
 
 msgid "Viber Identifier"
-msgstr ""
+msgstr "Identifikátor Viber"
 
 msgid "VK Identifier"
-msgstr ""
+msgstr "VK Identifikátor"
 
 msgid "WeChat Identifier"
-msgstr ""
+msgstr "WeChat identifikátor"
 
 msgid "Webchat Identifier"
-msgstr ""
+msgstr "Webchat Identifikátor"
 
 msgid "WhatsApp Identifier"
-msgstr ""
+msgstr "WhatsApp Identifikátor"
 
 msgid "Text"
 msgstr "Text"
